Fix qualification forms alignment

--- a/services/frontend-v3/src/components/profileForms/qualificationsForm/educationForm/EducationFormView.scss
+++ b/services/frontend-v3/src/components/profileForms/qualificationsForm/educationForm/EducationFormView.scss
@@ -5,11 +5,6 @@
   font-size: 1em !important;
 }
 
-.formItem {
-  font-size: 1.2em !important;
-  margin: 0;
-}
-
 .topRow {
   background-color: #dfe5e4;
   padding: 15px 10px 15px 10px;
