--- a/services/frontend-v3/src/components/profileForms/qualificationsForm/experienceForm/ExperienceFormView.scss
+++ b/services/frontend-v3/src/components/profileForms/qualificationsForm/experienceForm/ExperienceFormView.scss
@@ -1,10 +1,6 @@
 .datePicker {
   width: 100%;
 }
-.formItem {
-  font-size: 1.2em;
-  margin: 0;
-}
 
 .topRow {
   background-color: #dfe5e4;
